--- a/FLEX/Level-3_1/assets/css/style.css
+++ b/FLEX/Level-3_1/assets/css/style.css
@@ -46,7 +46,8 @@ header{
     padding: 20px 0;
     color: #666666;
     max-height: max-content;
-    
+    top: 0;
+    position: fixed;
  
     width: 100%;
  
