--- a/Grid/Grid Level 3_3/assets/css/style.css
+++ b/Grid/Grid Level 3_3/assets/css/style.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  
 }
 
 :root{
@@ -17,8 +18,13 @@
 
 html{
     font-family: "CormorantGaramond-Regular", "sans-serif";
+    background-color: #E9E9E0;
+
 }
 
+img{
+    max-width: 100vw;
+}
 
 
 
@@ -28,7 +34,7 @@ html{
 
 header h1{
     text-align: center;
-
+    
     margin: 20px 0;
 
 }
@@ -42,4 +48,83 @@ header .header_line{
     padding: 10px 0;
 }
 
+header{
+    margin-bottom: 20px;
+}
+/* Main Section */
 
+
+main{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+
+/* aside */
+aside h3{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.aside_main{
+    display: grid;
+    grid-template-rows: repeat(3,1fr) ;
+    gap: 20px;
+    
+   
+    
+  
+}
+
+main aside .article_knives{
+    border: 5px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
+    padding: 20px;
+
+    flex-direction: column;
+    gap: 5px;
+    text-align: center;
+ 
+
+    
+}
+
+
+
+.knives_text{
+   color: #333333d1;
+   }
+   .knives_text2{
+    color: #33333397;
+  
+    padding: 5px;
+    border-bottom: 1px solid var(--primary_color);
+    }
+ 
+    /* main section */
+
+.section_main{
+    padding: 0 5px;
+}
+    .section_main h1{
+        text-align: center;
+        font-size: 34px;
+        margin-bottom: 20px;
+
+            
+    }
+.wrap_main{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+  .articles{
+        display: grid;
+       grid-template-columns: repeat(2, 1fr);
+       
+    }
+
+    .articles article{
+        gap: 1px;
+    }
